--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.7.5",
     "swiper": "^9.3.2",
     "tinymce": "^6.7.2"
   },
