--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.6.2",
     "flowbite-typography": "^1.0.3",
     "fs-extra": "^11.1.1",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-confetti": "^6.1.0",
     "react-countup": "^6.4.2",
